2004-03-01  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl: correct 'exit' in extra tabs.
	make tkconfixed font Courier -12 (was Courier 10), use it on unix.
	Add extra space for OS X/Aqua in statusbar (for resize handle).
	Only use -overrelief in 8.4

2004-02-12  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (::tkcon::InitUI): check existence of tcl_platform(os)
	as it doesn't exist in the Tcl plugin.
	Show Attach info in tab text, maintain namespace attachment
	between console switches.
	(::tkcon::InterpEval, Interps): beware safe interps with Tk

2004-02-05  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl: brought code back to 8.0 compatability.
	Use $_ as last cached result var (was ${}).
	Ensure hoterrors garbage collection occurs across all tabs.

2004-01-29  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl: first whack at tabbed consoles

2004-01-28  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl: don't use menu tearoffs
	remove recognizable email addresses from source
	enabled more send variants (comm, dde, winsend) [bug 649257] (thoyts)
	change Packages menu (that would be too large with many packages)
	to a Manage Packages dialog.
	tightened up Create Socket dialog, added <Escape> dismiss binding.
	Moved source time initialization into ::tkcon::AtSource to guard
	against leftover vars and just better encapsulate it.
	(::tkcon::Retrieve): correct retrieve URL and add intelligence to
	sense whether what we retrieved is correct before overwriting file.

2003-11-18  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (::tkcon::InitSlave): remove tk_library from the
	seeded auto_path.  Do not add OPT(library) to auto_path if it is "".

2003-11-04  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (::tkcon::EvalSocketClosed): use tk_messageBox instead
	of tk_dialog

2003-10-06  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (dir): use %9ld instead of %9d to support large files

2003-04-08  Jeff Hobbs  <jeffh@ActiveState.com>
